--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -130,6 +130,22 @@ input[type="text"]:focus {
   color: #A683E3;
   opacity: 0.7;
 }
+/* footer{
+  color: white;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 375px;
+  height: 60px;
+  background-color: #fff;
+  box-shadow:inset 0 -3px 0 0 #A683E3;
+  border-radius: 10px;
+  text-align: center;
+  padding-bottom: 7px;
+} */
 
+h2{
+  color: #A683E3;
+  text-align: center;
+}
 
 
