--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2Do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    
+<%- include("header") -%>
+
     <div class="box" id="heading">
-        <h1><%= dayName %></h1>
+        <h1><%= listTitle %></h1>
     </div>
 
     <div class="box">
         <form class="item" action="/" method="post">
             <input type="text" autocomplete="off" name="newItem" placeholder="New Item">
-            <button type="submit" class="add">+</button>
+            <button type="submit" class="add" name="list" value=<%= listTitle %>>+</button>
         </form>
         <% for(var i=0;i<newDo.length;i++){%>
             <div class="item">
@@ -24,8 +16,4 @@
             </div>  
         <%}%>
     </div>
-   
-
-    
-</body>
-</html>
+<%- include("footer") -%>
